# cmake-basics

./: CMakeLists.txt  README.md  main.cpp
Calculator/: CMakeLists.txt
Calculator/apps/: calc.cpp
Calculator/include/: add.hpp  sub.hpp
Calculator/include/calc/: lib.hpp
Calculator/src/: add.cpp  calclib.cpp  sub.cpp
DisplayImage/: CMakeLists.txt
DisplayImage/apps/: DisplayImage.cpp
Image/: CMakeLists.txt
Image/include/: read_image.hpp
Image/src/: read_image.cpp
MyProject/: CMakeLists.txt  another.cpp  another.h  three.h  two.cpp
